# ntcn_ocr

./: README.rst  requirements.txt  setup.cfg
ntcn_ocr/: dataset.py  main.py  model.py
train/ADClermontFerrand_1F2/0001/: 010001.gt.txt  010002.gt.txt  010003.gt.txt  010007.gt.txt  010008.gt.txt  010009.gt.txt  01000a.gt.txt  01000b.gt.txt  01000c.gt.txt  01000d.gt.txt  01000e.gt.txt  010010.gt.txt  010011.gt.txt  010012.gt.txt  010013.gt.txt  010014.gt.txt  010015.gt.txt  010016.gt.txt  010018.gt.txt  010019.gt.txt  01001a.gt.txt  01001b.gt.txt  01001c.gt.txt  01001d.gt.txt  01001e.gt.txt  010022.gt.txt  010023.gt.txt  010024.gt.txt  010025.gt.txt  010025a.gt.txt  010025b.gt.txt  010026.gt.txt  010027.gt.txt  010028.gt.txt  010029.gt.txt  01002b.gt.txt  01002c.gt.txt  01002ca.gt.txt  01002e.gt.txt  010030.gt.txt  (+2 more)
train/BnF_fr_854_Chansonnier-I/0001/: 01.gt.txt  02.gt.txt  03.gt.txt  04.gt.txt  05.gt.txt  08.gt.txt  09.gt.txt  13.gt.txt  14.gt.txt  16.gt.txt  17.gt.txt  18.gt.txt  19.gt.txt  20.gt.txt  21.gt.txt  22.gt.txt  23.gt.txt  24.gt.txt  25.gt.txt  26.gt.txt  27.gt.txt  29.gt.txt  30.gt.txt  31.gt.txt  32.gt.txt  33.gt.txt  35.gt.txt  36.gt.txt  37.gt.txt  38.gt.txt
train/BnF_fr_854_Chansonnier-I/0008/: 01.gt.txt  02.gt.txt  03.gt.txt  05.gt.txt  08.gt.txt  09.gt.txt  10.gt.txt  11.gt.txt  12.gt.txt  13.gt.txt  14.gt.txt  15.gt.txt  17.gt.txt  18.gt.txt  19.gt.txt  21.gt.txt  22.gt.txt  24.gt.txt  25.gt.txt  26.gt.txt
train/BnF_fr_854_Chansonnier-I/0014/: 17.gt.txt  19.gt.txt  20.gt.txt  22.gt.txt  23.gt.txt  24.gt.txt  26.gt.txt  28.gt.txt  29.gt.txt  (+6 more)
(+3171 files in other folders)
