[metadata]
name = ntcn_ocr
author = Benjamin Kiessling
author-email = mittagessen@l.unchti.me
summary = noncausal TCN OCR play code
description-file = README.rst
license = Apache
classifier =
    Development Status :: 1 - Alpha
        Environment :: Console
        Intended Audience :: Science/Research
        License :: OSI Approved :: Apache Software License
        Operating System :: POSIX
        Programming Language :: Python :: 3.5
        Programming Language :: Python :: 3.6


keywords =
    optical character recognition

[bdist_wheel]
universal = 1

[files]
packages = ntcn_ocr

[entry_points]
console_scripts =
    ntcn_ocr = ntcn_ocr.main:cli

